# kfs

./: CMakeLists.txt  README.txt  build.xml  how-to-launch-on-mac
cmake/: FindLog4cpp.cmake  Findlibedit.cmake  Findxfs.cmake
conf/: ChunkServer.prp  KfsClient.prp  MetaServer.prp  forcefield.cfg  machines_distributed.cfg.sample  machines_local.cfg.sample
doc/: APPS_INT.txt  COMPILING.txt  DEPLOYING.txt  INTRO.txt  USING.txt  WHAT_IS_NEW.txt
examples/: KfsSample.java  KfsSample_main.cc
scripts/: kfs.spec  kfsclean.sh  kfsinstall.sh  kfslaunch.py  kfsprune.py  kfsrun.sh  kfssetup.py  kfsshell.py  machines.cfg  memory_pin.sh  metabkup.sh  slaves.py
scripts.mac_solaris/: kfsclean.sh  kfsfsck.py  kfsinstall.sh  kfsrun.sh  kfssetup.py  kfsshell.py  machines.cfg.local  metabkup.sh
src/: set_svnprops.sh
src/cc/: doxkfs
src/cc/access/: CMakeLists.txt  KfsAccessJni.cc  KfsModulePy.cc  kfs_setup.py
src/cc/chunk/: AtomicRecordAppender.cc  AtomicRecordAppender.h  BufferManager.cc  BufferManager.h  CMakeLists.txt  Chunk.h  ChunkManager.cc  ChunkManager.h  ChunkServer.cc  ChunkServer.h  ChunkServer_main.cc  ChunkSortHelper.cc  ChunkSortHelper.h  ClientManager.cc  ClientManager.h  ClientSM.cc  ClientSM.h  DiskIo.cc  DiskIo.h  KfsOps.cc  KfsOps.h  LeaseClerk.cc  LeaseClerk.h  Logger.cc  Logger.h  MetaServerSM.cc  MetaServerSM.h  RemoteSyncSM.cc  RemoteSyncSM.h  Replicator.cc  Replicator.h  Utils.cc  Utils.h  chunkscrubber_main.cc  chunktrimmer_main.cc  chunkupgrade_main.cc
src/cc/common/: BufferedLogWriter.cc  BufferedLogWriter.h  CMakeLists.txt  DailyRollingFileAppender.cc  DailyRollingFileAppender.h  Version.h  buildVers.py  config.h  cxxutil.h  hsieh_hash.cc  hsieh_hash.h  kfsdecls.h  kfstypes.h  log.cc  log.h  properties.cc  properties.h
src/cc/emulator/: CMakeLists.txt  ChunkServerEmulator.cc  ChunkServerEmulator.h  EmulatorSetup.cc  EmulatorSetup.h  LayoutEmulator.cc  LayoutEmulator.h  rebalanceexecutor_main.cc  rebalanceplanner_main.cc  replicachecker_main.cc  rereplicator_main.cc
src/cc/fuse/: CMakeLists.txt  kfs_fuse_main.cc
src/cc/libkfsClient/: CMakeLists.txt  KfsAsyncRW.cc  KfsAsyncRW.h  KfsAttr.h  KfsClient.cc  KfsClient.h  KfsClientInt.h  KfsNetClient.cc  KfsNetClient.h  KfsOps.cc  KfsOps.h  KfsPendingOp.cc  KfsPendingOp.h  KfsProtocolWorker.cc  KfsProtocolWorker.h  KfsRead.cc  KfsWrite.cc  LeaseClerk.cc  LeaseClerk.h  Utils.cc  Utils.h  WriteAppender.cc  WriteAppender.h  concurrency.h
src/cc/libkfsIO/: Acceptor.cc  Acceptor.h  BufferedSocket.cc  BufferedSocket.h  CMakeLists.txt  Checksum.cc  Checksum.h  Counter.cc  Counter.h  DiskConnection.h  DiskEvent.h  DiskManager.h  Event.h  EventManager.cc  EventManager.h  FileHandle.h  Globals.cc  Globals.h  IOBuffer.cc  IOBuffer.h  ITimeout.h  KfsCallbackObj.h  NetConnection.cc  NetConnection.h  NetErrorSimulator.cc  NetErrorSimulator.h  NetKicker.cc  NetKicker.h  NetManager.cc  NetManager.h  TcpSocket.cc  TcpSocket.h  TelemetryClient.cc  TelemetryClient.h
src/cc/meta/: CMakeLists.txt  ChildProcessTracker.cc  ChildProcessTracker.h  ChunkReplicator.cc  ChunkReplicator.h  ChunkServer.cc  ChunkServer.h  ChunkServerFactory.cc  ChunkServerFactory.h  ChunkServerHeartbeater.h  ClientManager.h  ClientSM.cc  ClientSM.h  LayoutManager.cc  LayoutManager.h  LeaseCleaner.cc  LeaseCleaner.h  NetDispatch.cc  NetDispatch.h  base.h  checkpoint.cc  checkpoint.h  entry.cc  entry.h  filelister_main.cc  kfsfsck_main.cc  kfsops.cc  kfstree.cc  kfstree.h  kfstypes.h  logcompactor_main.cc  logger.cc  logger.h  meta.cc  meta.h  metaserver_main.cc  queue.h  replay.cc  replay.h  request.cc  (+9 more)
src/cc/qcdio/: CMakeLists.txt  Makefile  iovperf.c  qcdebug.h  qcdiskqueue.cpp  qcdiskqueue.h  qcdllist.h  qcfdpoll.cpp  qcfdpoll.h  qciobufferpool.cpp  qciobufferpool.h  qcmutex.cpp  qcmutex.h  qcstutils.h  qcthread.cpp  qcthread.h  qcunittest.cpp  qcutils.cpp  qcutils.h
src/cc/rebalancer/: CMakeLists.txt  rebalancer.h  rebalancer_main.cc
src/cc/sailfish/mrtools/: CMakeLists.txt  appender.cc  icomparer_main.cc  ifile_base.h  ifilereader_main.cc  imerger.cc  imerger.h  imerger_main.cc  input_handler.cc  kappender.h  kappender_main.cc  kdatagen_main.cc  merge_validator_main.cc  settest_main.cc  util.cc  util.h  workgetter.cc  workgetter.h
src/cc/sailfish/mrtools/attic/: imerger.cc  imerger.h
src/cc/sailfish/mrtools/inmem-merge/: kgroupby.cc  kgroupby.h
src/cc/sailfish/sorter/: CMakeLists.txt  chunksort_test_main.cc  chunksorter.cc  chunksorter.h  chunksorter_main.cc  sortertest_main.cc  util.cc  util.h
src/cc/sailfish/workbuilder/: CMakeLists.txt  clientmgr.h  clientsm.cc  clientsm.h  indexreader.cc  job.cc  setnumreducer.cc  setnumreducer.h  statuschecker.cc  statuschecker.h  util.cc  util.h  workbuilder.cc  workbuilder.h  workbuilder_main.cc
src/cc/telemetry/: CMakeLists.txt  packet.h  telemetry_repeater_main.cc  telemetry_server.h  telemetry_server_main.cc
src/cc/tests/: CMakeLists.txt  KfsDataGen_main.cc  KfsDirFileTester_main.cc  KfsDirScanTest_main.cc  KfsIndexReader_main.cc  KfsLogTest_main.cc  KfsPerfReader_main.cc  KfsPerfWriter_main.cc  KfsRW_main.cc  KfsReader_main.cc  KfsRecordAppend_main.cc  KfsSeekWrite_main.cc  KfsTester.properties.sample  KfsTrunc_main.cc  KfsWriter_main.cc  memory_pinner_main.cc  mkfstree_main.cc
src/cc/tools/: CMakeLists.txt  KfsAppend.cc  KfsCat_main.cc  KfsCd.cc  KfsChangeReplication.cc  KfsCp.cc  KfsFstat.cc  KfsLs.cc  KfsMkdirs.cc  KfsMv.cc  KfsPwd.cc  KfsRm.cc  KfsRmdir.cc  KfsShell.h  KfsToolsCommon.cc  KfsToolsCommon.h  MonUtils.cc  MonUtils.h  cpfromkfs_main.cc  cptokfs_main.cc  kfscp_main.cc  kfsdataverify_main.cc  kfsfileenum_main.cc  kfsls_main.cc  kfsping_main.cc  kfsput_main.cc  kfsrebalance_main.cc  kfsretire_main.cc  kfsshell_main.cc  kfsstats_main.cc  kfstoggleworm_main.cc  utils.cc
src/python/flogger/: flogger.cfg  flogger.py  readdirplus.py
src/python/kfscp/: kfscp.py
src/python/rmr/: rmr.py
src/python/rw/: rw.py
src/python/unittests/: KfsClient.prp  dirops.py  worm.py  write-flush.py  write.py
webui/: kfsstatus.py
webui/files/: kfsstyle.css
(+13 files in other folders)
